--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section class="footer">
     <ul>
       <li>© 2010–<script>document.write(new Date().getFullYear())</script>. Website set in <a href="https://arillatype.studio/font/at-hauss">At Haüss</a>.</li>
-      <li id="link-logs"><a href="./logs.html">● Private logs.</a></li>
+      <li id="link-logs"><a href="./logs.html">● Personal logs.</a></li>
     </ul>
   </section>
 </body>
