--- a/logs.html
+++ b/logs.html
@@ -23,11 +23,11 @@
   </section>
   <section class="content" id="logs">
     <h2>Private logs</h2>
-    <p id="menu-logs"><a href="#reading">Reading</a> / <a href="#gaming">Gaming</a> / <a href="#running">Running</a> / <a href="#speaking">Speaking</a> / <a href="#teaching">Teaching</a> / <a href="#awards">Awards</a></p>
+    <p id="menu-logs">→ <a href="#reading">Reading</a> / <a href="#gaming">Gaming</a> / <a href="#running">Running</a> / <a href="#talks">Talks</a> / <a href="#workshops">Workshops</a> / <a href="#awards">Awards</a> / <a href="#jury">Jury</a></p>
     <div class="col2c anchor" id="reading">
-      <strong>Reading</strong>
+      <strong>● Reading</strong>
       <p>
-        Notes: 🥸 Reading / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Re-read
+        🥸 Reading / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Re-read
       </p>
       2025:
       <ul>
@@ -388,8 +388,8 @@
       </ul>
     </div>
     <div class="col2c anchor" id="gaming">
-      <strong>Gaming</strong>
-      <p>Notes: 🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
+      <strong>● Gaming</strong>
+      <p>🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
       </p>
       </ul>
       2025:
@@ -517,7 +517,7 @@
       </ul>
     </div>
     <div class="col2c anchor" id="running">
-      <p><strong>Running</strong></p>
+      <p><strong>● Running</strong></p>
       <table>
         <thead>
           <tr>
@@ -581,8 +581,8 @@
         </tbody>
       </table>
     </div>
-    <div class="col2c anchor" id="speaking">
-      <p><strong>Speaking</strong></p>
+    <div class="col2c anchor" id="talks">
+      <p><strong>● Talks</strong></p>
       <ul>
         <li><strong>Fonts, Tech & Craft.</strong> DiseñaFest, Zaragoza, Spain, 2025.</li>
         <li><strong>Fonts, Tech & Craft.</strong> Galicia Design Week, A Coruña, Spain, 2023.</li>
@@ -616,8 +616,8 @@
         <li><strong>Mamá, de mayor quiero ser tipógrafo.</strong> Escuela de Arte de Huesca, Huesca, Spain, 2012.</li>
       </ul>
     </div>
-    <div class="col2c anchor" id="teaching">
-      <p><strong>Teaching</strong></p>
+    <div class="col2c anchor" id="workshops">
+      <p><strong>● Workshops</strong></p>
       <ul>
         <li><strong>Type design.</strong> VIII Glíglifo, Sos del Rey Católico, Spain, 2024.</li>
         <li><strong>Type mentoring.</strong> Escuela San Telmo, Málaga, Spain, 2024.</li>
@@ -658,7 +658,7 @@
       </ul>
     </div>
     <div class="col2c anchor" id="awards">
-      <p><strong>Awards</strong></p>
+      <p><strong>● Awards</strong></p>
       <ul>
         <li><strong>Brand Impact Awards 2024</strong>, Bronze for <em>Enterprise Mobility</em>.</li>
         <li><strong>Brand Impact Awards 2024</strong>, Silver for <em>Android</em>.</li>
@@ -688,12 +688,22 @@
         <li><strong>CEA 2012</strong>, 2nd best project for <em>Valentina</em>.</li>
       </ul>
     </div>
+    <div class="col2c anchor" id="jury">
+      <p><strong>● Jury</strong></p>
+      <ul>
+        <li><strong>Premios ADG Laus</strong>, 2025.</li>
+        <li><strong>BASTEHA International Packaging Design</strong>, 2024.</li>
+        <li><strong>Premios Asociación Andaluza de Diseñadores</strong>, 2022.</li>
+        <li><strong>World Brand Design Society Awards</strong>, 2020.</li>
+        <li><strong>Premios Gràffica</strong>, 2020.</li>
+        <li><strong>Ukranian Design: The Very Best</strong>, 2020.</li>
+      </ul>
     </div>
   </section>
   <section class="footer">
     <ul>
       <li>© 2010–<script>document.write(new Date().getFullYear())</script>. Website set in <a href="https://arillatype.studio/font/at-hauss">At Haüss</a>.</li>
-      <li id="link-logs">● <a href="./logs.html">Private logs</a>.</li>
+      <li id="link-logs">● <a href="./logs.html">Personal logs</a>.</li>
     </ul>
   </section>
 </body>
