--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
   <section class="header">
     <ul>
-      <li><a href="./index.html" class="pedro">☻ Pedro Arilla</a></li>
+      <li><a href="./index.html" class="desnudo">☻ Pedro Arilla</a></li>
     </ul>
   </section>
   <section class="content" id="intro">
-    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. I help brands and humans worldwide to encapsulate their voices typographically at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.</h1>
+    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. I help brands and humans worldwide to encapsulate their voices typographically at <a href="https://arillatype.studio">Arillatype.Studio®</a>.</h1>
   </section>
   <section class="content" id="about">
     <h2>About</h2>
@@ -48,7 +48,7 @@
   <section class="footer">
     <ul>
       <li>© 2010–<script>document.write(new Date().getFullYear())</script>. Website set in <a href="https://arillatype.studio/font/at-hauss">At Haüss</a>.</li>
-      <li id="link-logs"><a href="./logs.html">● Personal logs.</a></li>
+      <li id="link-logs"><a href="./logs.html" class="desnudo">● Personal logs.</a></li>
     </ul>
   </section>
 </body>
