--- a/logs.html
+++ b/logs.html
@@ -18,7 +18,7 @@
 <body>
   <section class="header">
     <ul>
-      <li><a href="./index.html" class="pedro">☻ Pedro Arilla</a></li>
+      <li><a href="./index.html" class="desnudo">☻ Pedro Arilla</a></li>
     </ul>
   </section>
   <section class="content" id="logs">
@@ -703,7 +703,7 @@
   <section class="footer">
     <ul>
       <li>© 2010–<script>document.write(new Date().getFullYear())</script>. Website set in <a href="https://arillatype.studio/font/at-hauss">At Haüss</a>.</li>
-      <li id="link-logs">● <a href="./logs.html">Personal logs</a>.</li>
+      <li id="link-logs">● <a href="./logs.html" class="desnudo">Personal logs</a>.</li>
     </ul>
   </section>
 </body>
