--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <section class="content" id="about">
     <h2>About</h2>
     <p><strong>[English]</strong></p>
-    <p>I’m Pedro Arilla (1984—), a designer with a passion for words and Co-Founder & Type Director at <a href="https://arillatype.studio">Arillatype.Studio®</a>, leading a talented team that blends creativity, craft, and technology into contemporary, charismatic typefaces.</p>
+    <p>Pedro Arilla (1984—). I am Co-Founder & Type Director at <a href="https://arillatype.studio">Arillatype.Studio®</a>, where I work as part of a talented team blending creativity, craft, and technology to create contemporary, charismatic typefaces.</p>
     <p>I’ve designed over one hundred typefaces, led font projects for clients such as Google, Disney, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
-    <p>I previously graduated with Distinction in the world’s top Typeface Design Masters at the University of Reading (UK), and worked as a Creative Director at the legendary foundry Fontsmith (UK) [and Monotype (USA)].</p>
+    <p>I previously graduated with Distinction in the world’s top Typeface Design Masters at the University of Reading (UK), and worked as a Creative Director at the legendary foundry Fontsmith (UK) — and Monotype (USA).</p>
     <p>I’ve published a book on type evaluation (<em><a href="https://www.campgrafic.com/?portfolio=501">¿Por qué es buena esta tipografía?</a></em>, Campgràfic, 2024). For over a decade, I ran one of the most relevant blogs and podcasts on typography in Spanish (Don Serifa). For nearly a decade, I co-organised and co-taught an intensive typeface design workshop (Glíglifo).</p>
     <p><strong>[Español]</strong></p>
-    <p>Soy Pedro Arilla (1984—), un diseñador apasionado por las palabras, y cofundador y Director Tipográfico de <a href="https://arillatype.studio">Arillatype.Studio®</a>, donde lidero un talentoso equipo que combina creatividad, oficio y tecnología para crear tipografías contemporáneas y carismáticas.</p>
+    <p>Pedro Arilla (1984—). Soy cofundador y Director Tipográfico de <a href="https://arillatype.studio">Arillatype.Studio®</a>, donde formo parte de un talentoso equipo que combina creatividad, oficio y tecnología para crear tipografías contemporáneas y carismáticas.</p>
     <p>He diseñado más de cien tipografías, liderado proyectos tipográficos para clientes como Google, Disney, Coca-Cola, LaLiga, Unilever, Juegos Paralímpicos y UEFA, y diseñado tipografías en los sistemas de escritura latino, árabe, cirílico, griego, tailandés y japonés.</p>
-    <p>Anteriormente, me gradué con Distinción en el Máster en Diseño de Tipografía en la prestigiosa Universidad de Reading (Reino Unido), y trabajé como Director Creativo en la legendaria fundición Fontsmith (Reino Unido) [y Monotype (Estados Unidos)].</p>
+    <p>Anteriormente, me gradué con Distinción en el Máster en Diseño de Tipografía en la prestigiosa Universidad de Reading (Reino Unido), y trabajé como Director Creativo en la legendaria fundición Fontsmith (Reino Unido) —y Monotype (Estados Unidos).</p>
     <p>He publicado un libro sobre evaluación tipográfica (<em><a href="https://www.campgrafic.com/?portfolio=501">¿Por qué es buena esta tipografía?</a></em>, Campgràfic, 2024). Durante más de una década publiqué uno de los blogs y podcasts más relevantes sobre tipografía en español (Don Serifa). Durante casi una década co-organicé y co-impartí un curso intensivo de diseño tipográfico (Glíglifo).</p>
   </section>
     <section class="content" id="contact">
