--- a/logs.html
+++ b/logs.html
@@ -22,7 +22,7 @@
     </ul>
   </section>
   <section class="content" id="logs">
-    <h2>Private logs</h2>
+    <h2>Personal logs</h2>
     <p id="menu-logs">→ <a href="#reading">Reading</a> / <a href="#gaming">Gaming</a> / <a href="#running">Running</a> / <a href="#talks">Talks</a> / <a href="#workshops">Workshops</a> / <a href="#awards">Awards</a> / <a href="#jury">Jury</a></p>
     <div class="col2c anchor" id="reading">
       <strong>● Reading</strong>
