--- a/logs.html
+++ b/logs.html
@@ -32,6 +32,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>La vuelta al mundo en 80 días</em></strong> de Jules Verne</li>
+        <li>❤️ <em><strong>Blacksad 5: Amarillo</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad 4: El infierno, el silencio</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>✅ <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
         <li>❤️ <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
