--- a/logs.html
+++ b/logs.html
@@ -31,11 +31,14 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>La vuelta al mundo en 80 días</em></strong> de Jules Verne</li>
+        
+        <li>🥸 <em><strong>Nacidos de la bruma 2: El pozo de la ascensión</em></strong> de Brandon Sanderson</li>
+        <li>❤️ <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
+        <li>✅ <em><strong>¡Rebelión!</em></strong> de Julio Anguita</li>
+        <li>✅ <em><strong>La vuelta al mundo en 80 días</em></strong> de Jules Verne</li>
         <li>❤️ <em><strong>Blacksad 5: Amarillo</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad 4: El infierno, el silencio</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>✅ <em><strong>El aroma de los bosques</em></strong> de Dominique Roques</li>
-        <li>❤️ <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
         <li>⏹️ <em><strong>Las minas del rey Salomón</em></strong> de Henry Rider Haggard</li>
         <li>♻️ <em><strong>El corsario negro</em></strong> de Emilio Salgari</li>
         <li>✅ <em><strong>La librera detective</em></strong> de Sue Minix</li>
