--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <section class="header">
     <ul>
-      <li><a href="./index.html" class="desnudo">☻ Pedro Arilla</a></li>
+      <li><a href="./index.html" class="desnudo">● Pedro Arilla</a></li>
     </ul>
   </section>
   <section class="content" id="intro">
