--- a/logs.html
+++ b/logs.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link type="text/css" rel="stylesheet" href="style.css">
   <link type="text/plain" rel="author" href="humans.txt" />
-  <link rel="shortcut icon" type="image/png" href="https://pedroarilla.com/pedroarilla.png"/>
+  <link rel="shortcut icon" type="image/svg+xml" href="https://pedroarilla.com/pedroarilla.svg"/>
 </head>
 <body>
   <section class="header">
