--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
   </section>
   <section class="content" id="intro">
-    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. — We help brands and humans worldwide to encapsulate their voices typographically at <a href="https://arillatype.studio">Arillatype.Studio®</a>.</h1>
+    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. At <a href="https://arillatype.studio">Arillatype.Studio®</a>, we help brands and humans worldwide to encapsulate their voices typographically.</h1>
   </section>
   <section class="content" id="about">
     <h2>About</h2>
