--- a/logs.html
+++ b/logs.html
@@ -32,6 +32,7 @@
       2025:
       <ul>
         <li>🥸 <em><strong>La rebelión de las masas</em></strong> de José Ortega y Gasset</li>
+        <li>✅ <em><strong>Guía NBA 2025-26 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>El escudo Arverno</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Breve ensayo sobre la carta</em></strong> de Laía Argüelles Folch</li>
         <li>❤️ <em><strong>Nacidos de la bruma 3: El héroes de las eras</em></strong> de Brandon Sanderson</li>
