--- a/logs.html
+++ b/logs.html
@@ -31,12 +31,13 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>🥸 <em><strong>La rebelión de las masas</em></strong> de José Ortega y Gasset</li>
         <li>✅ <em><strong>Guía NBA 2025-26 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>El escudo Arverno</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Breve ensayo sobre la carta</em></strong> de Laía Argüelles Folch</li>
-        <li>❤️ <em><strong>Nacidos de la bruma 3: El héroes de las eras</em></strong> de Brandon Sanderson</li>
-        <li>❤️ <em><strong>Nacidos de la bruma 2: El pozo de la ascensión</em></strong> de Brandon Sanderson</li>
+        <li>✅ <em><strong>Nacidos de la bruma 3: El héroes de las eras</em></strong> de Brandon Sanderson</li>
+        <li>✅ <em><strong>Nacidos de la bruma 2: El pozo de la ascensión</em></strong> de Brandon Sanderson</li>
         <li>❤️ <em><strong>Nacidos de la bruma 1: El imperio final</em></strong> de Brandon Sanderson</li>
         <li>✅ <em><strong>¡Rebelión!</em></strong> de Julio Anguita</li>
         <li>✅ <em><strong>La vuelta al mundo en 80 días</em></strong> de Jules Verne</li>
