--- a/logs.html
+++ b/logs.html
@@ -31,6 +31,7 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>Blacksad 5: Todo cae, Primera parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>🔥 <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>⏹️ <em><strong>La rebelión de las masas</em></strong> de José Ortega y Gasset</li>
         <li>⏹️ <em><strong>Guía NBA 2025-26 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
@@ -120,11 +121,11 @@
         <li>✅ <em><strong>Zelda: El camino a BOTW y TOTK</em></strong> de F. J. Brenlla Duarte</li>
         <li>✅ <em><strong>Zelda: La saga más innovadora</em></strong> de F. J. Brenlla Duarte</li>
         <li>♻️ <em><strong>Las aventuras del joven Indiana Jones: La maldición de la momia</em></strong> de M. Stine y H. W. Stine</li>
-        <li>🔥 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
-        <li>🔥 <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
-        <li>🔥 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
-        <li>🔥 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
-        <li>🔥 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
+        <li>❤️ <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
+        <li>❤️ <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
+        <li>❤️ <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
+        <li>❤️ <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
+        <li>❤️ <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
         <li>✅ <em><strong>El hijo de Astérix</em></strong> de A. Uderzo</li>
         <li>❤️ <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
@@ -150,7 +151,7 @@
         <li>✅ <em><strong>Libros para no perderse</em></strong> de VV. AA. (elDiario.es)</li>
         <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
-        <li>❤️ <em><strong>One piece: #4 (Vol. 10–12)</em></strong> de Eiichirō Oda</li>
+        <li>✅ <em><strong>One piece: #4 (Vol. 10–12)</em></strong> de Eiichirō Oda</li>
       </ul>
       <br>2023:
       <ul>
@@ -184,8 +185,8 @@
         <li>♻️ <em><strong>Tintín en el Congo</em></strong> de Hergé</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
-        <li>❤️ <em><strong>One piece: #3 (Vol. 7–9)</em></strong> de Eiichirō Oda</li>
-        <li>❤️ <em><strong>One piece: #2 (Vol. 4–6)</em></strong> de Eiichirō Oda</li>
+        <li>✅ <em><strong>One piece: #3 (Vol. 7–9)</em></strong> de Eiichirō Oda</li>
+        <li>✅ <em><strong>One piece: #2 (Vol. 4–6)</em></strong> de Eiichirō Oda</li>
         <li>❤️ <em><strong>One piece: #1 (Vol. 1–3)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
@@ -242,7 +243,7 @@
         <li>⏹️ <em><strong>Apocalipsis</em></strong> de Stephen King</li>
         <li>⏹️ <em><strong>Bibliotecas imaginarias</em></strong> de Mario Satz</li>
         <li>🔥 <em><strong>Alguien habló de nosotros</em></strong> de Irene Vallejo</li>
-        <li>❤️ <em><strong>Por si las voces vuelven</em></strong> de Ángel Martín</li>
+        <li>✅ <em><strong>Por si las voces vuelven</em></strong> de Ángel Martín</li>
         <li>✅ <em><strong>El desorden de los libros</em></strong> de Massimo Gatta</li>
         <li>✅ <em><strong>Especial NBA 75 aniversario Gigantes</em></strong> de VV. AA.</li>
         <li>✅ <em><strong>Libros y libreros en la antigüedad</em></strong> de Alfonso Reyes</li>
