--- a/logs.html
+++ b/logs.html
@@ -595,6 +595,7 @@
     <div class="col2c anchor" id="talks">
       <p><strong>● Talks</strong></p>
       <ul>
+        <li><strong>Fonts, Tech & Craft.</strong> OFFF Sevilla, Sevilla, Spain, 2025.</li>
         <li><strong>Fonts, Tech & Craft.</strong> DiseñaFest, Zaragoza, Spain, 2025.</li>
         <li><strong>Fonts, Tech & Craft.</strong> Galicia Design Week, A Coruña, Spain, 2023.</li>
         <li><strong>Fonts & Branding.</strong> Órbitas, Jaén, Spain, 2023.</li>
