--- a/logs.html
+++ b/logs.html
@@ -31,7 +31,8 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Blacksad 5: Todo cae, Primera parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
+        <li>🥸 <em><strong>Blacksad 5: Todo cae, Segunda parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
+        <li>❤️ <em><strong>Blacksad 5: Todo cae, Primera parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>🔥 <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>⏹️ <em><strong>La rebelión de las masas</em></strong> de José Ortega y Gasset</li>
         <li>⏹️ <em><strong>Guía NBA 2025-26 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
