--- a/logs.html
+++ b/logs.html
@@ -31,7 +31,7 @@
       </p>
       2025:
       <ul>
-        <li>🥸 <em><strong>Blacksad Stories: Weekly</em></strong> de J. Díaz Canales y G. Rigano</li>
+        <li>✅ <em><strong>Blacksad Stories: Weekly</em></strong> de J. Díaz Canales y G. Rigano</li>
         <li>❤️ <em><strong>Blacksad 5: Todo cae, Segunda parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad 5: Todo cae, Primera parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>🔥 <em><strong>El celo</em></strong> de Sabina Urraca</li>
@@ -407,7 +407,7 @@
       </ul>
       2025:
       <ul>
-        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 3 hours</li>
+        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 6 hours</li>
         <li>⏹️ <em><strong>Hollow Knight: Silksong</em></strong> on Playstation 5, 14 hours</li>
         <li>⏹️ <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 1 hour</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
