--- a/logs.html
+++ b/logs.html
@@ -31,10 +31,12 @@
       </p>
       2025:
       <ul>
+        <li>🥸 <em><strong>Correr para vivir mejor</em></strong> de B. Glover y J. Shepherd</li>
+        <li>♻️ <em><strong>La vuelta a la Galia de Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>❤️ <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>✅ <em><strong>Blacksad Stories: Weekly</em></strong> de J. Díaz Canales y G. Rigano</li>
         <li>❤️ <em><strong>Blacksad 5: Todo cae, Segunda parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
         <li>❤️ <em><strong>Blacksad 5: Todo cae, Primera parte</em></strong> de J. Díaz Canales y J. Guarnido</li>
-        <li>🔥 <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>⏹️ <em><strong>La rebelión de las masas</em></strong> de José Ortega y Gasset</li>
         <li>⏹️ <em><strong>Guía NBA 2025-26 Gigantes</em></strong> de A. Gaitán, K. García y S. Rabinal</li>
         <li>♻️ <em><strong>El escudo Arverno</em></strong> de R. Goscinny y A. Uderzo</li>
@@ -315,8 +317,8 @@
         <li>✅ <em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
         <li>✅ <em><strong>Lluvia fina</em></strong> de Luis Landero</li>
         <li>❤️ <em><strong>The Arab of the Future: Vol. 4 (1987–1992)</em></strong> by Riad Sattouf</li>
-        <li>🔥 <em><strong>Saga: Book Three</em></strong> by Brian K. Vaughan and Fiona Staples</li>
-        <li>🔥 <em><strong>Saga: Book Two</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>❤️ <em><strong>Saga: Book Three</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>❤️ <em><strong>Saga: Book Two</em></strong> by Brian K. Vaughan and Fiona Staples</li>
         <li>🔥 <em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
         <li>✅ <em><strong>The shape of design</em></strong> by Frank Chimero</li>
         <li>♻️ <em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández</li>
@@ -362,7 +364,7 @@
         <li>✅ <em><strong>El cine segun Hitchcock</em></strong> de François Truffaut</li>
         <li>✅ <em><strong>Useful work v. Useless toil</em></strong> by William Morris</li>
         <li>❤️ <em><strong>Diseñador/Ciudadano</em></strong> de Milton Glaser</li>
-        <li>🔥 <em><strong>Pelea como una chica</em></strong> de Sandra Sabatés</li>
+        <li>❤️ <em><strong>Pelea como una chica</em></strong> de Sandra Sabatés</li>
         <li>✅ <em><strong>Optical letter spacing</em></strong> by David Kindersley</li>
         <li>❤️ <em><strong>Ser mujer negra en España</em></strong> de Desirée Bela-Lobedde</li>
         <li>✅ <em><strong>Hijo de Dios</em></strong> de Cormac McCarthy</li>
@@ -407,7 +409,7 @@
       </ul>
       2025:
       <ul>
-        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 6 hours</li>
+        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 10 hours</li>
         <li>⏹️ <em><strong>Hollow Knight: Silksong</em></strong> on Playstation 5, 14 hours</li>
         <li>⏹️ <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 1 hour</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
