--- a/logs.html
+++ b/logs.html
@@ -459,7 +459,7 @@
         <li>⏹️ <em><strong>Streets of Rage 4</em></strong> on Playstation 5, 4 hours</li>
         <li>⏹️ <em><strong>Fall Guys</em></strong> on Playstation 5, 10 hours</li>
         <li>⏹️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 2 hours</li>
-        <li>🔥 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours</li>
+        <li>🔥 <em><strong>Elden Ring</em></strong> on Playstation 5, 117 hours [💎 Platinum]</li>
         <li>⏹️ <em><strong>Cyberpunk 2077</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Death’s Door</em></strong> on Playstation 5, 16 hours</li>
         <li>⏹️ <em><strong>The Legend of Zelda: The Minish Cap</em></strong> on Game Boy Advance (emulated), 2 hours</li>
