--- a/logs.html
+++ b/logs.html
@@ -29,9 +29,14 @@
       <p>
         🥸 Reading / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Re-read
       </p>
-      2025:
+      2026:
       <ul>
-        <li>🥸 <em><strong>Correr para vivir mejor</em></strong> de B. Glover y J. Shepherd</li>
+        <li>🥸 <em><strong>Pablo Iglesias. 1850-1925: Una vida dedicada al socialismo</em></strong> de Joan Serrallonga i Urquidi</li>
+      </ul>
+      <br>2025:
+      <ul>
+        <li>✅ <em><strong>Sobrevivir al diseño</em></strong> de Marta Cerdà</li>
+        <li>✅ <em><strong>Correr para vivir mejor</em></strong> de B. Glover y J. Shepherd</li>
         <li>♻️ <em><strong>La vuelta a la Galia de Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>❤️ <em><strong>El celo</em></strong> de Sabina Urraca</li>
         <li>✅ <em><strong>Blacksad Stories: Weekly</em></strong> de J. Díaz Canales y G. Rigano</li>
@@ -404,12 +409,16 @@
     </div>
     <div class="col2c anchor" id="gaming">
       <strong>● Gaming</strong>
-      <p>🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
+      <p>
+        🎮 Playing / ⏹️ Stopped / ✅ Finished / ❤️ Loved / 🔥 WOW / ♻️ Replayed
       </p>
-      </ul>
-      2025:
+      2026:
       <ul>
         <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 10 hours</li>
+      </ul>
+      <br>2025:
+      <ul>
+        <li>♻️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 10 hours</li>
         <li>⏹️ <em><strong>Hollow Knight: Silksong</em></strong> on Playstation 5, 14 hours</li>
         <li>⏹️ <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 1 hour</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
