--- a/logs.html
+++ b/logs.html
@@ -32,6 +32,7 @@
       2026:
       <ul>
         <li>🥸 <em><strong>Pablo Iglesias. 1850-1925: Una vida dedicada al socialismo</em></strong> de Joan Serrallonga i Urquidi</li>
+        <li>🥸 <em><strong>Siete breves lecciones de física</em></strong> de Carlo Rovelli</li>
       </ul>
       <br>2025:
       <ul>
@@ -414,11 +415,11 @@
       </p>
       2026:
       <ul>
-        <li>🎮 <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 10 hours</li>
+        <li>🎮 <em><strong>Alan Wake II</em></strong> on Playstation 5, 2 hours</li>
       </ul>
       <br>2025:
       <ul>
-        <li>♻️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 10 hours</li>
+        <li>♻️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 12 hours</li>
         <li>⏹️ <em><strong>Hollow Knight: Silksong</em></strong> on Playstation 5, 14 hours</li>
         <li>⏹️ <em><strong>Super Mario Bros. 2 (Doki Doki Panic)</em></strong> on NES (emulated), 1 hour</li>
         <li>✅ <em><strong>Super Mario Bros.</em></strong> on NES (emulated), 2 hours</li>
