--- a/logs.html
+++ b/logs.html
@@ -33,6 +33,7 @@
       <ul>
         <li>🥸 <em><strong>Pablo Iglesias. 1850-1925: Una vida dedicada al socialismo</em></strong> de Joan Serrallonga i Urquidi</li>
         <li>🥸 <em><strong>Siete breves lecciones de física</em></strong> de Carlo Rovelli</li>
+        <li>✅ <em><strong>La tierra yerma</em></strong> de Carla Berrocal</li>
       </ul>
       <br>2025:
       <ul>
