--- a/logs.html
+++ b/logs.html
@@ -32,7 +32,7 @@
       2026:
       <ul>
         <li>🥸 <em><strong>Pablo Iglesias. 1850-1925: Una vida dedicada al socialismo</em></strong> de Joan Serrallonga i Urquidi</li>
-        <li>🥸 <em><strong>El derecho a las cosas bellas</em></strong> de Juan Evaristo Valls Boix</li>
+        <li>⏹️ <em><strong>El derecho a las cosas bellas</em></strong> de Juan Evaristo Valls Boix</li>
         <li>✅ <em><strong>Villanueva</em></strong> de Javi de Castro</li>
         <li>✅ <em><strong>Siete breves lecciones de física</em></strong> de Carlo Rovelli</li>
         <li>✅ <em><strong>La tierra yerma</em></strong> de Carla Berrocal</li>
