--- a/logs.html
+++ b/logs.html
@@ -32,6 +32,7 @@
       2026:
       <ul>
         <li>⏹️ <em><strong>Hamlet</em></strong> de William Shakespeare</li>
+        <li>✅ <em><strong>La balada del norte: Tomo 2</em></strong> de Alfonso Zapico</li>
         <li>❤️ <em><strong>La balada del norte: Tomo 1</em></strong> de Alfonso Zapico</li>
         <li>✅ <em><strong>Pablo Iglesias. 1850-1925: Una vida dedicada al socialismo</em></strong> de Joan Serrallonga i Urquidi</li>
         <li>⏹️ <em><strong>El derecho a las cosas bellas</em></strong> de Juan Evaristo Valls Boix</li>
